other-vpol/restrict-annotations/restrict-annotations.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-annotations
  annotations:
    policies.kyverno.io/title: Restrict Annotations in ValidatingPolicy
    policies.kyverno.io/category: Sample in Vpol 
    policies.kyverno.io/minversion: 1.19.1
    policies.kyverno.io/subject: Pod, Annotation
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/description: >-
      Some annotations control functionality driven by other cluster-wide tools and are not
      normally set by some class of users. This policy prevents the use of an annotation beginning
      with `fluxcd.io/`. This can be useful to ensure users either
      don't set reserved annotations or to force them to use a newer version of an annotation.
spec:
  validationActions: 
    - Audit
  autogen:
   podControllers:
     controllers: []
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments", "statefulsets", "daemonsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["cronjobs", "jobs"]
  validations:
    - expression: "!object.metadata.?annotations.orValue([]).exists(annotation, annotation.startsWith('fluxcd.io/') && !(has(exceptions.allowedValues) && string(annotation) in exceptions.allowedValues))"
      message: Cannot use Flux v1 annotation.
